stylize title on index.html

--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
     <div id="games-wrapper">
         <embed src="howdoyoudoit.swf" width="640" height="480">
         <p>Press any key to play - Use WASD to move your arms, J and K to rotate a doll</p>
-        <p><b>How Do You Do It</b></p>
+        <p><b>how do you Do It?</b></p>
         <p>A game by Nina Freeman, Emmett Butler, Decky Coss, and Jonathan Kittaka</p>
     </div>
 </body>
